Add quarkus SSE implementation for DomainEventPublisher